header: point Products->Streaming to local streaming.html (open same tab)

--- a/index.html
+++ b/index.html
@@ -2221,7 +2221,7 @@
       </button>
       <div class="products-menu" id="productsMenu" style="display:none;position:absolute;z-index:1000;background:#fff;border-radius:12px;box-shadow:0 2px 8px rgba(0,0,0,0.08);padding:10px 0;top:40px;">
       <a href="#plansTitle" id="productIptv" target="_self" style="display:block;padding:8px 24px;color:#d97706;text-decoration:none;font-weight:500;">IPTV</a>
-      <a href="https://landing-streaming.com" id="productStreaming" target="_blank" style="display:block;padding:8px 24px;color:#d97706;text-decoration:none;font-weight:500;">Streaming</a>
+    <a href="./streaming.html" id="productStreaming" target="_self" style="display:block;padding:8px 24px;color:#d97706;text-decoration:none;font-weight:500;">Streaming</a>
       <a href="https://landing-pines.com" id="productPines" target="_blank" style="display:block;padding:8px 24px;color:#d97706;text-decoration:none;font-weight:500;">Pines</a>
       </div>
     </div>
