--- a/index.html
+++ b/index.html
@@ -531,17 +531,19 @@
             position: absolute;
             left: 18px;
             right: 18px;
-            bottom: 20px; /* anchor near the bottom so it appears 'over' the card */
+            /* Instead of anchoring to the bottom, start the panel lower so it doesn't fully cover the top/logo area */
+            top: 110px; /* places the panel beginning just below the avatar/logo area */
             box-sizing: border-box;
             overflow: auto;
             max-height: 0;
             opacity: 0;
-            transform: translateY(12px);
+            transform: translateY(8px);
             transition: max-height .28s ease, opacity .18s linear, transform .18s ease;
             pointer-events: none;
             z-index: 60; /* high so it floats above nearby elements */
         }
         .card-details[data-open="true"] {
+            /* allow the panel to expand downwards but keep its top anchored below the logos */
             max-height: 520px;
             opacity: 1;
             pointer-events: auto;
@@ -562,19 +564,23 @@
 
         /* Improve Close button appearance inside details (pill style, subtle gray) */
         .close-details-btn {
-            display: block;
-            width: 100%;
-            padding: 10px 14px;
-            background: #f3f4f6;
-            border: none;
+            /* make the close button float and visible above the panel */
+            position: absolute;
+            top: 8px;
+            right: 8px;
+            display: inline-block;
+            padding: 8px 12px;
+            background: #ffffff;
+            border: 1px solid rgba(15,23,42,0.06);
             color: #374151;
-            font-weight: 700;
-            border-radius: 10px;
+            font-weight: 800;
+            border-radius: 999px; /* pill */
             cursor: pointer;
-            box-shadow: 0 4px 14px rgba(2,6,23,0.06);
-            transition: background .15s ease, transform .08s ease;
+            box-shadow: 0 6px 18px rgba(2,6,23,0.08);
+            transition: background .12s ease, transform .08s ease;
+            z-index: 80; /* above the details panel */
         }
-        .close-details-btn:hover { background: #e9ecef; transform: translateY(-1px); }
+        .close-details-btn:hover { background: #f7fafc; transform: translateY(-2px); }
 
         /* Ensure grid doesn't stretch when overlays open */
         .pricing-cards { align-items: start; grid-auto-rows: auto; }
